# FFlyanx

./: CMakeLists.txt  Makefile  README.en.md  README.md  bochsrc
doc/: 01-工程介绍.md  02-开发环境搭建.md  02.5-准备开发前的一些话.md  03-引导程序.md  04-理论篇：FAT12文件系统.md  05-Hello Loader.md  06-神奇的Makefile.md  07-检查并得到计算机内存信息.md  08-加载内核文件到内存中.md  09-理论篇：32位保护模式.md  10-进入32位保护模式.md  11-计算内存大小并打印.md  12-启动分页机制.md  13-理论篇：ELF32可执行文件.md  17-理论篇：IDT和TSS.md  18-Flyanx的中断和异常机制.md  19-可变参数(...).md  22-时钟驱动.md  23-多进程框架.md  24-Hello Multiprocess.md  25-迟到的待机任务.md  26-进程调度.md  27-IPC进程间通信.md  29-时钟驱动任务.md  32-键盘驱动-0.md  32-键盘驱动-1.md
doc/素材/: 提交记录.txt
doc/素材/16/: CMakeLists.txt
doc/素材/16/头文件/include/: stdarg.h  stdio.h  unistd.h
doc/素材/16/头文件/include/flyanx/: config.h  const.h  syslib.h  type.h
doc/素材/16/头文件/include/ibm/: diskparm.h  partition.h
doc/素材/16/头文件/include/sys/: types.h
doc/素材/19/: 视频里未介绍的一些改动.txt
include/: ansi.h  lib.h  stdarg.h  termios.h
include/flyanx/: callnr.h  common.h  config.h  const.h  keymap.h  syslib.h  type.h
include/ibm/: cmos.h
include/sys/: times.h
src/boot/: boot.asm  loader.asm
src/boot/include/: fat12hdr.inc  load.inc  loader_16lib.inc  loader_32lib.inc  pm.inc
src/kernel/: asm_const.inc  assert.h  clock.c  const.h  dump.c  exception.c  global.h  i8259.c  ipc_msg.c  kernel.asm  kernel_386lib.asm  keyboard.c  main.c  misc.c  process.c  process.h  protect.c  protect.h  prototype.h  start.c  table.c  type.h
src/kernel/keymaps/: us-std.h
src/lib/ansi/: stringc.c
src/lib/i386/ipc/: ipc_msg.asm
src/lib/stdio/: vsprintf.c
(+9 files in other folders)
